# nomad-job-spec

./: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: settings.py
data/: nomad-job-specification.md
docs/: goal.md  prompts.md
notes/: notes.md
openspec/changes/add-gpu-detection/: design.md  proposal.md  tasks.md
openspec/changes/add-gpu-detection/specs/analysis-subgraph/: spec.md
openspec/changes/add-workload-classification/: design.md  proposal.md  tasks.md
openspec/changes/add-workload-classification/specs/analysis-subgraph/: spec.md
openspec/changes/add-workload-classification/specs/spec-generation/: spec.md
openspec/changes/refactor-analysis-subgraph/: design.md  proposal.md  tasks.md
openspec/changes/refactor-analysis-subgraph/specs/analysis-subgraph/: spec.md
openspec/changes/refactor-analysis-subgraph/specs/core-workflow/: spec.md
prompts/: analysis.json  analyze_build_system.json  analyze_ports.json  classify_workload.json  detect_gpu.json  fix.json  generation.json
src/: __init__.py  graph.py  main.py  prompt_cli.py
src/llm/: __init__.py  provider.py
src/memory/: __init__.py
src/nodes/: __init__.py  analyze.py  analyze_build_system.py  analyze_ports.py  confirm_dockerfile.py  deploy.py  discover.py  discover_sources.py  enrich.py  extract.py  generate.py  merge.py  question.py  validate.py
src/observability/: __init__.py
src/prompts/: __init__.py
src/subgraphs/: __init__.py  analysis.py
src/subgraphs/analysis/: __init__.py  classify_workload.py  detect_gpu.py  enrich.py  extract_env_vars.py  graph.py
src/tools/: __init__.py  codebase.py  consul.py  env_deploy.py  fabio.py  hcl.py  infra_status.py  nomad_version.py  vault.py
src/tools/extractors/: __init__.py  base.py  jobforge.py
template/: service.hcl
tests/: __init__.py  conftest.py  test_graph.py  test_observability.py  test_prompts.py
tests/fixtures/sample_repos/express-app/: Dockerfile  package.json  server.js
tests/fixtures/sample_repos/express-app/deploy/: .env.deploy
tests/fixtures/sample_repos/flask-api/: .env.example  Dockerfile  app.py  requirements.txt
tests/fixtures/sample_repos/flask-api/deploy/: .env.deploy
tests/fixtures/sample_repos/nginx-simple/: Dockerfile
tests/fixtures/sample_repos/nginx-simple/deploy/: .env.deploy
tests/fixtures/sample_repos/postgres-db/: .env.example  Dockerfile
tests/test_nodes/: __init__.py  test_analyze.py  test_generate.py
tests/test_subgraphs/: __init__.py  test_analysis.py  test_classify_workload.py  test_detect_gpu.py  test_extract_env_vars.py
tests/test_tools/: test_codebase.py  test_env_deploy.py  test_hcl.py
