[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nomad-job-spec"
version = "0.1.0"
description = "LangGraph-based AI agent for automating Nomad job specification creation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Gerald" }
]
keywords = ["nomad", "langgraph", "ai", "agent", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LangGraph and LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",

    # LLM serving
    "openai>=1.0.0",  # For vLLM OpenAI-compatible API

    # Nomad
    "python-nomad>=2.0.0",

    # Git and file analysis
    "gitpython>=3.1.0",

    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Memory layer
    "mem0ai>=0.1.0",
    "qdrant-client>=1.9.0",
    "ollama>=0.4.0",  # For Ollama embeddings

    # Observability
    "langfuse>=2.0.0",

    # Prompt optimization
    "dspy-ai>=2.5.0",

    # Infrastructure integration
    "hvac>=2.1.0",           # Vault client
    "python-consul>=1.1.0",  # Consul client
    "httpx>=0.27.0",         # HTTP client for Fabio
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
nomad-spec = "src.main:app"
nomad-spec-prompt = "src.prompt_cli:app"

[project.urls]
Homepage = "https://github.com/gerald/nomad-job-spec"
Issues = "https://github.com/gerald/nomad-job-spec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
